; ModuleID = '/home/carl/AnghaBench/kphp-kdb/friend/extr_friend-data.c_get_common_friends.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/friend/extr_friend-data.c_get_common_friends.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rev_friends_intersect_len = common dso_local global i64 0, align 8
@rev_friends = common dso_local global i32 0, align 4
@MAX_FRIENDS = common dso_local global i64 0, align 8
@rev_friends_intersect_pos = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_common_friends(i32 %0, i32 %1, i32* %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  store i64 0, i64* @rev_friends_intersect_len, align 8
  %11 = load i32, i32* @rev_friends, align 4
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @rev_friends_find(i32 %11, i32 %12)
  %14 = load i64, i64* @rev_friends_intersect_len, align 8
  %15 = load i64, i64* @MAX_FRIENDS, align 8
  %16 = icmp sle i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert(i32 %17)
  store i64 0, i64* @rev_friends_intersect_pos, align 8
  %19 = load i32, i32* @rev_friends, align 4
  %20 = load i32*, i32** %8, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32*, i32** %9, align 8
  %24 = load i32, i32* %10, align 4
  %25 = call i32 @rev_friends_intersect_constructive(i32 %19, i32 %22, i32* %23, i32 %24)
  ret i32 %25
}

declare dso_local i32 @rev_friends_find(i32, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @rev_friends_intersect_constructive(i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
